[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://cube_6.png" type="Texture" id=2]
[ext_resource path="res://Anchor.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/godot-arcore/ARCore.tscn" type="PackedScene" id=4]
[ext_resource path="res://Box.cs" type="Script" id=5]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 2 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="ARCore" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.91567 )
anchor_scene = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 5.0
margin_top = 98.0
margin_right = 162.0
margin_bottom = 188.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )
script = ExtResource( 5 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.842278, 0.352938, -0.407434, 0, 0.755847, 0.654748, 0.539043, -0.55148, 0.636634, 0, 0, 0 )

[node name="Info" type="Label" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = 10.0
margin_bottom = 41.0
rect_scale = Vector2( 3, 3 )
text = "Hello
"

[node name="Log" type="Label" parent="."]
margin_left = 8.0
margin_top = 209.0
margin_right = 339.0
margin_bottom = 335.0
rect_scale = Vector2( 3, 3 )

[connection signal="anchor_added" from="ARCore" to="." method="_on_ARCore_anchor_added"]
[connection signal="anchor_removed" from="ARCore" to="." method="_on_ARCore_anchor_removed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
